# Infoton

./: .gitignore  Cargo.toml  LICENSE  README.md
.cursor/plans/: p30_computer_stack_378ba9ab.plan.md
.github/workflows/: conformance.yml  pages.yml
crates/p30_calculator/: Cargo.toml
crates/p30_core/: Cargo.toml
crates/p30_inspect/: Cargo.toml
crates/p30_inspect/src/: conformance.rs  main.rs
docs/: P30-SPEC.md  ROADMAP.md  infoton-source-audit.md  qudit-basis.md  validity-model-analysis.md
docs/adr/: 001-coprime-position.md  002-isa-strategy.md
docs/bench/: dual-fpga-thermal.md  thermal-claim-chain.md
docs/isa/: P30-ISA-v0.1.md
emulator/p30emu/: Cargo.toml
fpga/: README.md  golden_pack.inc  p30_pack.v  tb_p30_pack.v
fpga/litex/: README.md  p30_arty.py  p30_cmod_a7.py  p30_periph.py  p30_soc.py  requirements.txt
spec/: canonical_corpus.txt  conformance_vectors.json  mitochondria.schema.json  mitochondria_vectors.json  pack_vectors.json  qudit_vectors.json  test-vectors.json  tier1_alphabet.json
tools/: bench_dual_fpga.py  compare_tier1.py  conformance.py  extract_infoton_iframes.py  gen_corpus_firmware.py  gen_mitochondria_vectors.py  generate_conformance_vectors.py  mitochondria_core.py  p30emu_smoke.py  prepare_viz.py  qudit_verify.py  soak_core.py  soak_emulate.py  soak_uart_sim.py  thermal_report.py  verify_demo.py  verify_litex_soc.py  verify_mitochondria.py  verify_mitochondria_js.mjs  verify_p30_pack.py  verify_soak_bench.py
viz/: README.md  compare-v2.html  compare.html  encoder.html  hamming.html  hub.html  impact.html  landing.html
(+76 files in other folders)
